# maxwell-demon

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  config.example.toml  pyproject.toml  repomix.config.json  requirements.txt
.github/workflows/: ci.yml
DOC/: README.md  docs.md  guide.md  theoretical_framework.md
data/: README.md  urls_example.json  urls_example.txt
scripts/: coverage.sh  generate_shadow_dataset.py  prepare_resources.py  run_analysis.py  scripts_dataset.py  scripts_fetch_human.py
src/maxwell_demon/: __init__.py  analyzer.py  cli.py  config.py  metrics.py  output_paths.py  standard_cli.py  tournament.py  tournament_cli.py
src/maxwell_demon/tools/: __init__.py  aggregate_docs.py  plot_phase.py  plot_results.py  plot_results_html.py  report_stats.py
tests/: test_aggregate_docs.py  test_core_coverage.py  test_dataset_helper.py  test_fetch_human_urls.py  test_generate_shadow_dataset.py  test_report_stats.py  test_smoke.py  test_standard_cli.py
