[project]
name = "maxwell-demon"
version = "1.2.0"
description = "CLI + library for entropy-based text analysis."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "numpy",
  "scipy",
  "pandas",
  "matplotlib",
  "seaborn",
  "plotly",
  "newspaper3k",
  "lxml_html_clean",
  "openai",
  "tqdm",
  "tomli; python_version < \"3.11\"",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = ["ruff>=0.6.0", "pylint>=2.17.0", "pytest>=7.0.0", "pytest-cov>=4.0.0"]

[project.scripts]
maxwell-demon = "maxwell_demon.cli:main"
maxwell-demon-tournament = "maxwell_demon.tournament_cli:main"
maxwell-demon-plot = "maxwell_demon.tools.plot_results:main"
maxwell-demon-plot-html = "maxwell_demon.tools.plot_results_html:main"
maxwell-demon-phase = "maxwell_demon.tools.plot_phase:main"

[tool.ruff]
line-length = 100
src = ["."]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
tag_format = "v{version}"
branch = "main"
